styleguide/stylesheets/sfumato.css
/* ... */
/**
 * @molecule CSS Grid
 * @section Layout > Framework
 * @modifiers
 *  [sf-grid] - This is the grid selector that wraps your grid cells.
 * @markup
 *  <div sf-grid>
 *    <div sf-grid-cell><p>Column One</p></div>
 *    <div sf-grid-cell><p>Column Two</p></div>
 *  </div>
 */
[sf-grid] {
  --sf-flow: initial;
  --sf-zero-flow: var(--sf-flow);
  --sf-phab-flow: var(--sf-zero-flow);
  --sf-tabp-flow: var(--sf-phab-flow);
  --sf-tabl-flow: var(--sf-tabp-flow);
  --sf-note-flow: var(--sf-tabl-flow);
  --sf-desk-flow: var(--sf-note-flow);
  --sf-elas-flow: var(--sf-desk-flow);
  --sf-grid-flow: var(--sf-zero-flow);
  --sf-cols: 1fr;
  --sf-zero-cols: var(--sf-cols);
  --sf-phab-cols: var(--sf-zero-cols);
  --sf-tabp-cols: var(--sf-phab-cols);
  --sf-tabl-cols: var(--sf-tabp-cols);
  --sf-note-cols: var(--sf-tabl-cols);
  --sf-desk-cols: var(--sf-note-cols);
  --sf-elas-cols: var(--sf-desk-cols);
  --sf-grid-cols: var(--sf-zero-cols);
  --sf-rows: initial;
  --sf-zero-rows: var(--sf-rows);
  --sf-phab-rows: var(--sf-zero-rows);
  --sf-tabp-rows: var(--sf-phab-rows);
  --sf-tabl-rows: var(--sf-tabp-rows);
  --sf-note-rows: var(--sf-tabl-rows);
  --sf-desk-rows: var(--sf-note-rows);
  --sf-elas-rows: var(--sf-desk-rows);
  --sf-grid-rows: var(--sf-zero-rows);
  --sf-col-gap: 0;
  --sf-zero-col-gap: var(--sf-col-gap);
  --sf-phab-col-gap: var(--sf-zero-col-gap);
  --sf-tabp-col-gap: var(--sf-phab-col-gap);
  --sf-tabl-col-gap: var(--sf-tabp-col-gap);
  --sf-note-col-gap: var(--sf-tabl-col-gap);
  --sf-desk-col-gap: var(--sf-note-col-gap);
  --sf-elas-col-gap: var(--sf-desk-col-gap);
  --sf-grid-col-gap: var(--sf-zero-col-gap);
  --sf-row-gap: 0;
  --sf-zero-row-gap: var(--sf-row-gap);
  --sf-phab-row-gap: var(--sf-zero-row-gap);
  --sf-tabp-row-gap: var(--sf-phab-row-gap);
  --sf-tabl-row-gap: var(--sf-tabp-row-gap);
  --sf-note-row-gap: var(--sf-tabl-row-gap);
  --sf-desk-row-gap: var(--sf-note-row-gap);
  --sf-elas-row-gap: var(--sf-desk-row-gap);
  --sf-grid-row-gap: var(--sf-zero-row-gap);
  --sf-top-gap: 0;
  --sf-zero-top-gap: var(--sf-top-gap);
  --sf-phab-top-gap: var(--sf-zero-top-gap);
  --sf-tabp-top-gap: var(--sf-phab-top-gap);
  --sf-tabl-top-gap: var(--sf-tabp-top-gap);
  --sf-note-top-gap: var(--sf-tabl-top-gap);
  --sf-desk-top-gap: var(--sf-note-top-gap);
  --sf-elas-top-gap: var(--sf-desk-top-gap);
  --sf-grid-top-gap: var(--sf-zero-top-gap);
  --sf-bottom-gap: 0;
  --sf-zero-bottom-gap: var(--sf-bottom-gap);
  --sf-phab-bottom-gap: var(--sf-zero-bottom-gap);
  --sf-tabp-bottom-gap: var(--sf-phab-bottom-gap);
  --sf-tabl-bottom-gap: var(--sf-tabp-bottom-gap);
  --sf-note-bottom-gap: var(--sf-tabl-bottom-gap);
  --sf-desk-bottom-gap: var(--sf-note-bottom-gap);
  --sf-elas-bottom-gap: var(--sf-desk-bottom-gap);
  --sf-grid-bottom-gap: var(--sf-zero-bottom-gap);
  --sf-auto-columns: 1fr;
  --sf-zero-auto-columns: var(--sf-auto-columns);
  --sf-phab-auto-columns: var(--sf-zero-auto-columns);
  --sf-tabp-auto-columns: var(--sf-phab-auto-columns);
  --sf-tabl-auto-columns: var(--sf-tabp-auto-columns);
  --sf-note-auto-columns: var(--sf-tabl-auto-columns);
  --sf-desk-auto-columns: var(--sf-note-auto-columns);
  --sf-elas-auto-columns: var(--sf-desk-auto-columns);
  --sf-grid-auto-columns: var(--sf-zero-auto-columns);
  --sf-auto-rows: auto;
  --sf-zero-auto-rows: var(--sf-auto-rows);
  --sf-phab-auto-rows: var(--sf-zero-auto-rows);
  --sf-tabp-auto-rows: var(--sf-phab-auto-rows);
  --sf-tabl-auto-rows: var(--sf-tabp-auto-rows);
  --sf-note-auto-rows: var(--sf-tabl-auto-rows);
  --sf-desk-auto-rows: var(--sf-note-auto-rows);
  --sf-elas-auto-rows: var(--sf-desk-auto-rows);
  --sf-grid-auto-rows: var(--sf-zero-auto-rows);
  --sf-align-items: normal;
  --sf-zero-align-items: var(--sf-align-items);
  --sf-phab-align-items: var(--sf-zero-align-items);
  --sf-tabp-align-items: var(--sf-phab-align-items);
  --sf-tabl-align-items: var(--sf-tabp-align-items);
  --sf-note-align-items: var(--sf-tabl-align-items);
  --sf-desk-align-items: var(--sf-note-align-items);
  --sf-elas-align-items: var(--sf-desk-align-items);
  --sf-grid-align-items: var(--sf-zero-align-items);
  --sf-vertical-align-items: normal;
  --sf-zero-vertical-align-items: var(--sf-vertical-align-items);
  --sf-phab-vertical-align-items: var(--sf-zero-vertical-align-items);
  --sf-tabp-vertical-align-items: var(--sf-phab-vertical-align-items);
  --sf-tabl-vertical-align-items: var(--sf-tabp-vertical-align-items);
  --sf-note-vertical-align-items: var(--sf-tabl-vertical-align-items);
  --sf-desk-vertical-align-items: var(--sf-note-vertical-align-items);
  --sf-elas-vertical-align-items: var(--sf-desk-vertical-align-items);
  --sf-grid-vertical-align-items: var(--sf-zero-vertical-align-items);
  --sf-collapse-whitespace: 0;
  --sf-zero-collapse-whitespace: var(--sf-collapse-whitespace);
  --sf-phab-collapse-whitespace: var(--sf-zero-collapse-whitespace);
  --sf-tabp-collapse-whitespace: var(--sf-phab-collapse-whitespace);
  --sf-tabl-collapse-whitespace: var(--sf-tabp-collapse-whitespace);
  --sf-note-collapse-whitespace: var(--sf-tabl-collapse-whitespace);
  --sf-desk-collapse-whitespace: var(--sf-note-collapse-whitespace);
  --sf-elas-collapse-whitespace: var(--sf-desk-collapse-whitespace);
  --sf-grid-collapse-whitespace: var(--sf-zero-collapse-whitespace);
  display: grid;
  grid-auto-flow: var(--sf-grid-flow);
  grid-template-columns: var(--sf-grid-cols);
  grid-template-rows: var(--sf-grid-rows);
  grid-column-gap: var(--sf-grid-col-gap);
  grid-row-gap: var(--sf-grid-row-gap);
  grid-auto-columns: var(--sf-grid-auto-columns);
  grid-auto-rows: var(--sf-grid-auto-rows);
  margin-top: var(--sf-grid-top-gap);
  margin-bottom: var(--sf-grid-bottom-gap);
  justify-items: var(--sf-grid-align-items);
  align-items: var(--sf-grid-vertical-align-items);
}
/* ... */

